modifying wrong github addresses.

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -25,7 +25,7 @@
   - type: arxiv
     link: https://arxiv.org/abs/2403.06668
   - type: github
-    link: https://github.com/jaewonalive/PeerAiD
+    link: jaewonalive/PeerAiD
   tags:
     - Top Conf.
     - AI/ML
@@ -74,11 +74,11 @@
     - type: arxiv
       link: http://arxiv.org/abs/2403.06664
     - type: github
-      link: https://github.com/AIS-SNU/smart-infinity
+      link: AIS-SNU/smart-infinity
     - type: video
       link: https://www.youtube.com/watch?v=o1O3-mQCSv4&feature=youtu.be
     - type: poster
-      link: https://github.com/AIS-SNU/smart-infinity/blob/main/assets/smart-infinity_poster_hpca24.pdf
+      link: AIS-SNU/smart-infinity/blob/main/assets/smart-infinity_poster_hpca24.pdf
   tags:
     - Top Conf.
     - Syst. SW
@@ -115,7 +115,7 @@
     - type: arxiv
       link: https://arxiv.org/abs/2301.12443
     - type: github
-      link: https://github.com/hongsunjang/Pipe-BD
+      link: hongsunjang/Pipe-BD
 
 - id: 10.1145/3575693.3575712
   authors:
@@ -458,7 +458,7 @@
     - type: slide
       link: resources_paper/qimera_slides.pdf
     - type: github
-      link: https://github.com/iamkanghyunchoi/qimera
+      link: iamkanghyunchoi/qimera
   tags:
     - Top Conf. 
     - AI/ML 
@@ -485,7 +485,7 @@
     - type: slide
       link: resources_paper/cvpr_ait.pdf
     - type: github
-      link: https://github.com/iamkanghyunchoi/ait
+      link: iamkanghyunchoi/ait
   tags:
     - Top Conf. 
     - AI/ML 
