--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper titled <u>PID-Comm: A Fast and Flexible Collective Communication Framework for Commodity Processing-in-DIMMs</u> has been accepted to ISCA 2024. Congratulations to authors and see you at Buenos Aires!'
+  print_date: Mar. 2024
+  date: 2024-03-29
+
 - content: 'Received the best paper award honorable mention from <u>HPCA 2024</u>. Congratulations to the authors of "<u>Smart-Infinity</u>"!'
   print_date: Mar. 2024
   date: 2024-03-01
