--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper titled <u>DataFreeShield: Defending Adversarial Attacks without Training Data</u> has been accepted to ICML 2024. Cheers to your endeavor!'
+  print_date: May. 2024
+  date: 2024-05-28
+
 - content: 'Our paper titled <u>PID-Comm: A Fast and Flexible Collective Communication Framework for Commodity Processing-in-DIMMs</u> has been accepted to ISCA 2024. Congratulations to authors and see you at Buenos Aires!'
   print_date: Mar. 2024
   date: 2024-03-28
