--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>GraNNDis: Fast Distributed Graph Neural Network Training Framework for Multi-Server Clusters</u> has been accepted to PACT 2024. Congratulations!'
+  print_Date: June 2024
+  date: 2024-06-27
+
 - content: 'Our paper titled <u>DataFreeShield: Defending Adversarial Attacks without Training Data</u> has been accepted to ICML 2024. Cheers to your endeavor!'
   print_date: May. 2024
   date: 2024-05-28
