add paper image

--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -34,6 +34,7 @@
   - Jinho Lee
   date: '2024-05-02'
   publisher: International Conference on Machine Learning (ICML)
+  image: images_paper/datafreeshield.pdf
   tags:
   - Top Conf.
   - AI/ML
