--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -561,6 +561,7 @@
   link: https://arxiv.org/abs/2010.00823
   tags:
   - AI/ML
+  image: images_paper/deepcomposer.png
   buttons:
   - type: paper
     link: https://program.ismir2020.net/lbd_431.html
