modify pdf to png.

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -84,7 +84,7 @@
   - type: video
     link: https://youtu.be/qxQiHhbQ8kU?si=ecHV3H1AAbWHDSVx
   - type: poster
-    link: https://github.com/jaewonalive/PeerAiD/blob/main/assets/PeerAiD_poster_cvpr24.pdf
+    link: https://github.com/jaewonalive/PeerAiD/blob/main/assets/PeerAiD_poster_cvpr24.png
   - type: slide
     link: https://docs.google.com/presentation/d/1nY40LIQVsDLaIvnlu-DSANVl_NzTcsR3/edit?usp=drive_link
 
