--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -84,14 +84,14 @@
   - type: video
     link: https://youtu.be/qxQiHhbQ8kU?si=ecHV3H1AAbWHDSVx
   - type: poster
-    link: https://github.com/jaewonalive/PeerAiD/blob/main/assets/PeerAiD_poster_cvpr24.png
+    link: https://github.com/jaewonalive/PeerAiD/blob/main/assets/PeerAiD_poster_cvpr24.pdf
   - type: slide
     link: https://docs.google.com/presentation/d/1nY40LIQVsDLaIvnlu-DSANVl_NzTcsR3/edit?usp=drive_link
 
   tags:
     - Top Conf.
     - AI/ML
-  image: images_paper/PeerAiD_poster_cvpr24.pdf
+  image: images_paper/PeerAiD_poster_cvpr24.png
   id: ""
 
 - id: 10.1145/3627535.3638474
