--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -542,7 +542,7 @@
 - id: arxiv:2203.17008
   type: paper
   image: images_paper/ait.png
-  publisher: Neural Information Processing Systems (NeurIPS)
+  publisher: Computer Vision and Pattern Recognition Conference (CVPR)
   buttons:
     - type: arxiv
       link: https://arxiv.org/abs/2203.17008
