--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -275,6 +275,7 @@
   - Top Conf.
   - AI/ML
   - Syst. SW
+  image: images_paper/optimus_cc.png
   buttons:
   - type: arxiv
     link: https://arxiv.org/abs/2301.09830
