--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -15,7 +15,7 @@
     - Top Conf.
     - AI/ML
     - Syst. SW
-  image: images_paper/granndis_overall.png
+  image: images_paper/granndis.png
   id: ""
 
 - title: "DataFreeShield: Defending Adversarial Attacks without Training Data"
@@ -123,7 +123,7 @@
     - Top Conf.
     - AI/ML
     - Syst. SW
-  image: images_paper/pipette.png
+  image: images_paper/pipette_overall.png
   id: 10.23919/DATE58400.2024.10546826
 
 - title: "Smart-Infinity: Fast Large Language Model Training using Near-Storage Processing on a Real System"
@@ -183,6 +183,7 @@
       link: https://arxiv.org/abs/2301.12443
     - type: github
       link: hongsunjang/Pipe-BD
+  image: images_paper/pipebd.png
 
 - id: 10.1145/3575693.3575712
   authors:
@@ -204,6 +205,34 @@
       link: https://dl.acm.org/doi/10.1145/3575693.3575712
     - type: artifact
       link: https://zenodo.org/record/7220824
+
+- id: 10.1145/3575693.3575712
+  title: 'Optimus-CC: Efficient Large NLP Model Training with 3D Parallelism Aware
+    Communication Compression'
+  authors:
+  - Jaeyong Song<sup>1</sup>
+  - Jinkyu Yim<sup>1</sup>
+  - Jaewon Jung
+  - Hongsun Jang
+  - Hyung-Jin Kim
+  - Youngsok Kim
+  - Jinho Lee
+  publisher: Proceedings of the 28th ACM International Conference on Architectural
+    Support for Programming Languages and Operating Systems, Volume 2
+  date: '2023-01-27'
+  link: https://doi.org/gtm365
+  tags:
+  - Top Conf.
+  - AI/ML
+  - Syst. SW
+  buttons:
+  - type: arxiv
+    link: https://arxiv.org/abs/2301.09830
+  - type: paper
+    link: https://dl.acm.org/doi/10.1145/3575693.3575712
+  - type: artifact
+    link: https://zenodo.org/record/7220824
+  image: images_paper/optimus_cc.png
 
 - id: 10.1109/HPCA56546.2023.10071102
   authors:
