--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>MimiQ: Low-Bit Data-Free Quantization of Vision Transformers with Encouraging Inter-Head Attention Similarity</u> has been accepted to AAAI 2025. Congratulations to authors!'
+  print_date: Dec. 2024
+  date: 2024-12-10
+
 - content: 'Our paper <u>Piccolo: Large-Scale Graph Processing with Fine-Grained In-Memory Scatter-Gather</u> has been accepted to HPCA 2025. Congratulations!'
   print_date: Nov. 2024
   date: 2024-11-03
