add welcome messages from mar. 2024 to present

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,4 @@
-- content: 'Welcome to our lab, Dain Kwon, Jun Sung!'
+- content: 'Welcome to our lab, Dain Kwon and Jun Sung!'
   print_date: Jan. 2025
   date: 2025-01-01
 
