add ICS2025 on news and source

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>G^3SA: A GPU-Accelerated Gold Standard Genetics Library for End-to-End Sequence Alignment</u> has been accepted to ICS 2025. Congratulations to authors!'
+  print_date: Apr. 2025
+  date: 2025-04-10
+
 - content: 'Welcome to our lab, Dain Kwon and Jun Sung!'
   print_date: Jan. 2025
   date: 2025-01-01
