--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,17 @@
+- title: "G³SA: A GPU-Accelerated Gold Standard Genetics Library for End-to-End Sequence Alignment"
+  authors:
+    - Yeejoo Han
+    - Sunwoo Kim
+    - Seongyeon Park
+    - Jinho Lee
+  date: '2025-06-08'
+  publisher: International Conference on Supercomputing (ICS)
+  tags:
+    - Top Conf.
+    - AI/ML
+  image: images_paper/mimiq.png
+  id: ""
+
 - title: "MimiQ: Low-Bit Data-Free Quantization of Vision Transformers with Encouraging Inter-Head Attention Similarity"
   authors:
     - Kanghyun Choi
