--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,4 @@
-- content: 'Our paper <u>G^3SA: A GPU-Accelerated Gold Standard Genetics Library for End-to-End Sequence Alignment</u> has been accepted to ICS 2025. Congratulations to authors!'
+- content: 'Our paper <u>G^3SA: A GPU-Accelerated Gold Standard Genomics Library for End-to-End Sequence Alignment</u> has been accepted to ICS 2025. Congratulations to authors!'
   print_date: Apr. 2025
   date: 2025-04-10
 
