Pathweaver added in publication and news. Sukjin Kim profile updated.

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>PathWeaver: A High-Throughput Multi-GPU System for Graph-Based Approximate Nearest Neighbor Search</u> has been accepted to ATC 2025. Congratulations to authors!'
+  print_date: May. 2025
+  date: 2025-05-18
+
 - content: 'Our paper <u>G^3SA: A GPU-Accelerated Gold Standard Genomics Library for End-to-End Sequence Alignment</u> has been accepted to ICS 2025. Congratulations to authors!'
   print_date: Apr. 2025
   date: 2025-04-10
