--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>DANCE++: Differentiable Accelerator/Network Co-Exploration with Hard Constraints and Data-Free Training for Real-World Scenarios</u> has been accepted to IEEE TCAD. Congratulations!'
+  print_date: Jun. 2025
+  date: 2025-06-13
+
 - content: 'Our paper <u>PathWeaver: A High-Throughput Multi-GPU System for Graph-Based Approximate Nearest Neighbor Search</u> has been accepted to ATC 2025. Congratulations to authors!'
   print_date: May. 2025
   date: 2025-05-18
