add taehee kwon and woobeen jo

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'A warm welcome to Taehee Kwon and Woobeen Jo!'
+  print_date: Jul. 2025
+  date: 2025-07-01
+
 - content: 'Our paper <u>DANCE++: Differentiable Accelerator/Network Co-Exploration with Hard Constraints and Data-Free Training for Real-World Scenarios</u> has been accepted to IEEE TCAD. Congratulations!'
   print_date: Jun. 2025
   date: 2025-06-13
