--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>FALA: Locality-Aware PIM-Host Cooperation for Graph Processing with Fine-Grained Column Access</u> has been accepted to MICRO 2025. Congratulations!'
+  print_date: Jul. 2025
+  date: 2025-07-18
+
 - content: 'A warm welcome to Taehee Kwon and Woobeen Jo!'
   print_date: Jul. 2025
   date: 2025-07-01
