add DMO-DB (PACT)

--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,5 +1,23 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
+- title: 'DMO-DB: Mitigating the Data Movement Bottlenecks of GPU-Accelerated Relational
+    OLAP'
+  authors:
+  - Chaemin Lim
+  - Suhyun Lee
+  - Jinwoo Choi
+  - Joonsung Kim
+  - Jinho Lee
+  - Youngsok Kim
+  date: '2025-11-20'
+  publisher: International Conference on Parallel Architectures and Compilation Techniques
+    (PACT)
+  tags:
+  - Top Conf.
+  - Syst. SW
+  id: ''
+  plugin: sources.py
+  file: sources.yaml
 - title: 'FALA: Locality-Aware PIM-Host Cooperation for Graph Processing with Fine-Grained
     Column Access'
   authors:
