--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,4 +1,17 @@
 
+- title: "AGIS: Fast Approximate Graph Pattern Mining with Structure-Informed Sampling"
+  authors:
+    - Seoyong Lee
+    - Jinho Lee
+  date: '2026-08-31'
+  publisher:  Proceedings of International Conference on Very Large Data Bases (VLDB)
+  tags:
+    - Top Conf.
+    - Syst. SW
+  id: ""
+
+
+
 - title: "DMO-DB: Mitigating the Data Movement Bottlenecks of GPU-Accelerated Relational OLAP"
   authors:
     - Chaemin Lim
