--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,4 +1,4 @@
-- content: 'Our paper <u>AGIS: Fast Approximate Graph Pattern Mining with Structure-Informed Sampling</u> has been accepted to VLDB. Congratulations Seoyong :)'
+- content: 'Our paper <u>AGIS: Fast Approximate Graph Pattern Mining with Structure-Informed Sampling</u> has been accepted to VLDB. Congratulations Seoyong, it is an exceptional achievement as an undergraduate student :)'
   print_date: Sep. 2025
   date: 2025-09-16
 
