--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -1,3 +1,7 @@
+- content: 'Our paper <u>FlexiWalker: Extensible GPU Framework for Efficient Dynamic Random Walks with Runtime Adaptation</u> has been accepted to EuroSys. Congratulations!'
+  print_date: Sep. 2025
+  date: 2025-09-20
+
 - content: 'Our paper <u>AGIS: Fast Approximate Graph Pattern Mining with Structure-Informed Sampling</u> has been accepted to VLDB. Congratulations Seoyong, it is an exceptional achievement as an undergraduate student :)'
   print_date: Sep. 2025
   date: 2025-09-16
