--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,18 @@
+- title: "FlexiWalker: Extensible GPU Framework for Efficient Dynamic Random Walks with Runtime Adaptation"
+  authors:
+    - Seongyeon Park
+    - Jaeyong Song
+    - Changmin Shin
+    - Sukjin Kim
+    - Junguk Hong
+    - Jinho Lee
+  date: '2026-04-27'
+  publisher:  European Conference on Computer Systems (EuroSys)
+  tags:
+    - Top Conf.
+    - Syst. SW
+  id: ""
+
 
 - title: "AGIS: Fast Approximate Graph Pattern Mining with Structure-Informed Sampling"
   authors:
