--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,17 @@
+- title: "FALQON: Accelerating LoRA Fine-tuning with FP8 Arithmetic"
+  authors:
+    - Kanghyun Choi
+    - Hyeyoon Lee
+    - SunJong Park
+    - Dain Kwon
+    - Jinho Lee
+  date: '2025-12-05'
+  publisher: NeurIPS 2025
+  tags:
+    - Top Conf.
+    - AI/ML
+  id: ""
+
 - title: "FlexiWalker: Extensible GPU Framework for Efficient Dynamic Random Walks with Runtime Adaptation"
   authors:
     - Seongyeon Park
